# OmniDrums

./: .gitignore
plugin/: CMakeLists.txt
plugin/include/OmniDrums/: Identifiers.h  OmniSampleLibrary.h  OmniState.h  PluginEditor.h  PluginProcessor.h
plugin/include/OmniDrums/Audio/: SamplePlayer.h
plugin/include/OmniDrums/Audio/Core/: DrumChannel.h  OmniEngine.h  SampleCache.h
plugin/include/OmniDrums/Audio/Shared/: RollingRMS.h
plugin/include/OmniDrums/GUI/: OmniEditor.h  ViewSelector.h
plugin/include/OmniDrums/GUI/Browser/: SampleList.h  SearchHeader.h
plugin/include/OmniDrums/GUI/SampleView/: ChannelComponent.h  SampleView.h  VUMeter.h
plugin/include/OmniDrums/GUI/Shared/: Color.h  Fonts.h  Images.h  OmniLookAndFeel.h  Util.h
plugin/source/: ChannelComponent.cpp  Common.cpp  DrumChannel.cpp  Fonts.cpp  Identifiers.cpp  Images.cpp  OmniEditor.cpp  OmniEngine.cpp  OmniLookAndFeel.cpp  OmniSampleLibrary.cpp  OmniState.cpp  PluginEditor.cpp  PluginProcessor.cpp  RollingRMS.cpp  SampleCache.cpp  SampleList.cpp  SamplePlayer.cpp  SampleView.cpp  SearchHeader.cpp  Util.cpp  VUMeter.cpp  ViewSelector.cpp
test/source/: AudioProcessorTest.cpp
